--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "@hot-loader/react-dom": "^16.13.0",
+    "@material-ui/core": "^4.11.0",
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -18,9 +22,31 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.20.0",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-style": "^0.5.0",
+    "connected-react-router": "^6.6.1",
+    "date-fns": "^2.16.1",
+    "framer-motion": "^2.6.6",
+    "history": "^4.7.2",
+    "html-react-parser": "^0.14.0",
+    "lodash.merge": "^4.6.2",
+    "polished": "^3.6.6",
     "react": "^17.0.2",
+    "react-chartjs-2": "^2.10.0",
+    "react-content-loader": "^5.1.1",
+    "react-csv": "^2.0.3",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^17.0.2",
+    "react-hot-loader": "^4.12.21",
+    "react-redux": "^7.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-filter": "^0.0.20",
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "styled-components": "^5.1.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -37,6 +63,11 @@
     ]
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@types/axios": "^0.14.0",
+    "@types/chart.js": "^2.9.24",
     "eslint": "7.5.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-react": "^7.23.2",
