--- a/package.json
+++ b/package.json
@@ -8,8 +8,47 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "cross-env NODE_ENV=development eslint . --cache --ext .js,.jsx,.ts,.tsx",
+    "lint-fix": "yarn --silent lint --fix; exit 0",
+    "lint-styles": "stylelint --ignore-path .eslintignore '**/*.*(css|scss)' --syntax scss",
+    "lint-styles-fix": "yarn --silent lint-styles --fix; exit 0"
   },
+  "lint-staged": {
+    ".src/*.{tsx,ts,js}": [
+      "cross-env NODE_ENV=development eslint --cache --fix"
+    ],
+    "{*.json,.{eslintrc,prettierrc,stylelintrc}}": [
+      "prettier --ignore-path .eslintignore --parser json --write"
+    ],
+    "*.{css,scss}": [
+      "stylelint --ignore-path .eslintignore --syntax scss --fix",
+      "prettier --ignore-path .eslintignore --single-quote --write"
+    ],
+    "*.{html,md}": [
+      "prettier --ignore-path .eslintignore --single-quote --write"
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://gitlab.com/Semantix/frontend/jarvis-web.git"
+  },
+  "author": {
+    "name": "Semantix S/A",
+    "email": "ligia.almeida@semantix.com.br",
+    "url": "https://semantix.com.br/"
+  },
+  "license": "MIT",
+  "keywords": [
+    "boilerplate",
+    "react",
+    "redux",
+    "typescript",
+    "ts",
+    "hot",
+    "reload"
+  ],
+  "homepage": "https://gitlab.com/Semantix/frontend/jarvis-web",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@hot-loader/react-dom": "^16.13.0",
@@ -18,10 +57,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "axios": "^0.20.0",
     "chart.js": "^2.9.3",
     "chartjs-plugin-style": "^0.5.0",
@@ -47,7 +82,6 @@
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.1",
-    "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "browserslist": {
@@ -68,9 +102,89 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@types/axios": "^0.14.0",
     "@types/chart.js": "^2.9.24",
-    "eslint": "7.5.0",
+    "@types/date-fns": "^2.6.0",
+    "@types/history": "^4.7.6",
+    "@types/jest": "^26.0.15",
+    "@types/lodash.merge": "^4.6.6",
+    "@types/material-ui": "^0.21.8",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-chartjs-2": "^2.5.7",
+    "@types/react-content-loader": "^4.0.0",
+    "@types/react-csv": "^1.1.1",
+    "@types/react-datepicker": "^3.1.1",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-test-renderer": "^16.9.3",
+    "@types/redux-logger": "^3.0.8",
+    "@types/redux-persist": "^4.3.1",
+    "@types/redux-persist-transform-filter": "^0.0.4",
+    "@types/socket.io-client": "^1.4.33",
+    "@types/styled-components": "^5.1.3",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^4.0.1",
+    "cross-env": "^7.0.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^9.0.0",
+    "eslint-config-erb": "^1.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-compat": "^3.8.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.18.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.23.2",
-    "prettier": "^2.0.5"
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-testcafe": "^0.2.1",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
+    "prettier": "^2.0.5",
+    "redux-logger": "^3.0.6",
+    "stylelint": "^13.6.1",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^20.0.0",
+    "testcafe": "^1.8.8",
+    "testcafe-react-selectors": "^4.0.0",
+    "typescript": "^4.1.2"
+  },
+  "devEngines": {
+    "node": ">=7.x",
+    "npm": ">=4.x",
+    "yarn": ">=0.21.3"
+  },
+  "prettier": {
+    "overrides": [
+      {
+        "files": [
+          ".prettierrc",
+          ".babelrc",
+          ".eslintrc",
+          ".stylelintrc"
+        ],
+        "options": {
+          "parser": "json"
+        }
+      }
+    ],
+    "singleQuote": true
+  },
+  "stylelint": {
+    "extends": [
+      "stylelint-config-standard",
+      "stylelint-config-prettier"
+    ]
+  },
+  "renovate": {
+    "extends": [
+      "bliss"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
