--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.12.21",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
