feat: add ts config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,20 +2,32 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "target": "es5",
+    "downlevelIteration": true,
     "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
+    "declaration": true,
+    "declarationMap": true,
     "skipLibCheck": true,
+    "pretty": true,
+    "sourceMap": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
+    "strictFunctionTypes": false,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "allowJs": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "typeRoots": ["src/types", "./node_modules/@types"],
+    "types": ["styled-components"]
   },
-  "include": ["src"]
+  "include": ["src", "src/types/*.ts", "./lib.d.ts"],
+  "exclude": ["node_modules", "typings", "test", "release", "src/dist"]
 }
