--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-csv": "^2.0.3",
     "react-datepicker": "^3.1.3",
     "react-dom": "^17.0.2",
+    "react-full-screen": "^1.0.2",
     "react-hot-loader": "^4.12.21",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
