--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
     "skipLibCheck": true,
     "pretty": true,
     "sourceMap": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
