--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lodash.merge": "^4.6.2",
     "polished": "^3.6.6",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-chartjs-2": "^2.10.0",
     "react-content-loader": "^5.1.1",
     "react-csv": "^2.0.3",
@@ -109,6 +110,7 @@
     "@types/material-ui": "^0.21.8",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-beautiful-dnd": "^13.1.1",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-content-loader": "^4.0.0",
     "@types/react-csv": "^1.1.1",
