--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "chartjs-plugin-style": "^0.5.0",
     "connected-react-router": "^6.6.1",
     "date-fns": "^2.16.1",
+    "formik": "^2.2.9",
     "framer-motion": "^2.6.6",
     "history": "^4.7.2",
     "html-react-parser": "^0.14.0",
@@ -83,7 +84,8 @@
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "browserslist": {
     "production": [
@@ -116,9 +118,11 @@
     "@types/react-csv": "^1.1.1",
     "@types/react-datepicker": "^3.1.1",
     "@types/react-dom": "^17.0.0",
+    "@types/react-input-mask": "^3.0.1",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-test-renderer": "^16.9.3",
+    "@types/react-text-mask": "^5.4.9",
     "@types/redux-logger": "^3.0.8",
     "@types/redux-persist": "^4.3.1",
     "@types/redux-persist-transform-filter": "^0.0.4",
