--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@hot-loader/react-dom": "^16.13.0",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -66,6 +67,7 @@
     "history": "^4.7.2",
     "html-react-parser": "^0.14.0",
     "lodash.merge": "^4.6.2",
+    "moment": "^2.29.1",
     "polished": "^3.6.6",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
@@ -84,6 +86,7 @@
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
@@ -128,6 +131,7 @@
     "@types/redux-persist-transform-filter": "^0.0.4",
     "@types/socket.io-client": "^1.4.33",
     "@types/styled-components": "^5.1.3",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^4.0.1",
     "cross-env": "^7.0.0",
