--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "productName": "Jarvis",
   "description": "Just A Rather Very Intelligent System (J.A.R.V.I.S.)",
+  "homepage": "http://jarvis.corpintra.net",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
