--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
 app-prod:
-  container_name: dockerized-react-app
+  container_name: dockerized-jarvis-web-app
   build:
     context: .
     dockerfile: Dockerfile
