--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/Semantix/frontend/jarvis-web.git"
+    "url": "git+https://gitlab.br154.corpintra.net/producao/jarvis/front-end.git"
   },
   "author": {
     "name": "Semantix S/A",
