--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,14 @@
 version: '3.7'
 services:
-app-prod:
-  container_name: dockerized-jarvis-web-app
-  build:
-    context: .
-    dockerfile: Dockerfile
-  ports:
-    - '8080:80'
+  app:
+    container_name: dockerized-jarvis-web-app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - '.:/app'
+      - '/app/node_modules'
+    ports:
+      - '3001:3000'
+    environment:
+      - NODE_ENV=development
