--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,8 @@
 node_modules/
-run-app-deploy.sh
-docker-compose.yml
-docker-compose-prod.yml
-Dockerfile
-Dockerfile-prod
+# run-app-deploy.sh
+# docker-compose.yml
+# docker-compose-prod.yml
+# Dockerfile
+# Dockerfile-prod
+build
+.git
