--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -1,14 +1,17 @@
 # build environment
-FROM node:16.6.2 as build
+FROM node:13-alpine as build
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json /app/package.json
-RUN npm install --legacy-peer-deps
-RUN mkdir node_modules/.cache && chmod -R 777 node_modules/.cache
-RUN npm install react-scripts@3.0.1 -g
+RUN npm install
+RUN npm install -g react-scripts@3.0.1
 COPY . /app
 RUN npm run build
 
 # production environment
-COPY — from=build /app/build/
+FROM nginx:stable-alpine
+COPY --from=build /app/build /usr/share/nginx/html
+# new
+COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
