--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,9 +1,9 @@
 version: '3.7'
 services:
   app-prod:
-    container_name: dockerized-jarvis-web-app
+    container_name: dockerized-jarvis-app
     build:
       context: .
       dockerfile: Dockerfile-prod
     ports:
-    - '8080:80'
+      - '8080:80'
