--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   app:
-    container_name: dockerized-jarvis-web-app
+    container_name: dockerized-jarvis-app
     build:
       context: .
       dockerfile: Dockerfile
