feat: adding HTTP_PROXY variables

--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -2,6 +2,8 @@
 FROM node:13-alpine as build
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
+ENV HTTP_PROXY="http://proxy.br154.corpintra.net:3128"
+ENV HTTPS_PROXY="https://proxy.br154.corpintra.net:3128"
 COPY package.json /app/package.json
 RUN npm install
 RUN npm install -g react-scripts@3.0.1
