--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@hot-loader/react-dom": "^16.14.0",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -89,6 +90,7 @@
     "styled-components": "^5.1.1",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
+    "yarn": "^1.22.17",
     "yup": "^0.32.9"
   },
   "browserslist": {
