--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "react-chartjs-2": "^2.10.0",
     "react-content-loader": "^5.1.1",
     "react-csv": "^2.0.3",
-    "react-datepicker": "^3.1.3",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-full-screen": "^1.0.2",
     "react-redux": "^7.2.0",
@@ -113,7 +113,7 @@
     "@types/lodash.merge": "^4.6.6",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
+    "@types/react": "18.0.8",
     "@types/react-beautiful-dnd": "^13.1.1",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-content-loader": "^4.0.0",
