--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "description": "Just A Rather Very Intelligent System (J.A.R.V.I.S.)",
   "homepage": "http://jarvis.corpintra.net",
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "cross-env NODE_ENV=development eslint . --cache --ext .js,.jsx,.ts,.tsx",
-    "lint-fix": "yarn --silent lint --fix; exit 0",
+    "lint-fix": "--silent lint --fix; exit 0",
     "lint-styles": "stylelint --ignore-path .eslintignore '**/*.*(css|scss)' --syntax scss",
-    "lint-styles-fix": "yarn --silent lint-styles --fix; exit 0"
+    "lint-styles-fix": "--silent lint-styles --fix; exit 0"
   },
   "lint-staged": {
     ".src/*.{tsx,ts,js}": [
@@ -64,7 +65,7 @@
     "connected-react-router": "^6.6.1",
     "date-fns": "^2.16.1",
     "formik": "^2.2.9",
-    "framer-motion": "^2.6.6",
+    "framer-motion": "^6.3.16",
     "history": "^4.10.1",
     "html-react-parser": "^0.14.0",
     "lodash.merge": "^4.6.2",
@@ -77,10 +78,9 @@
     "react-csv": "^2.0.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
-    "react-full-screen": "^1.0.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-filter": "^0.0.20",
@@ -113,7 +113,7 @@
     "@types/lodash.merge": "^4.6.6",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^12.0.0",
-    "@types/react": "18.0.8",
+    "@types/react": "17.0.44",
     "@types/react-beautiful-dnd": "^13.1.1",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-content-loader": "^4.0.0",
@@ -131,8 +131,8 @@
     "@types/socket.io-client": "^1.4.33",
     "@types/styled-components": "^5.1.3",
     "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "cross-env": "^7.0.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^9.0.0",
