--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -7,7 +7,7 @@ ENV HTTP_PROXY="http://53.93.3.100:3128"
 RUN npm config set proxy http://53.93.3.100:3128
 #RUN npm config set proxy https://53.93.3.100:3128
 COPY package.json /app/package.json
-RUN npm install
+RUN npm install --legacy-peer-deps
 RUN npm install -g react-scripts@5.0.1
 RUN npm run preinstall
 COPY . /app
