--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Just A Rather Very Intelligent System (J.A.R.V.I.S.)",
   "homepage": "http://jarvis.corpintra.net",
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
+    "preinstall": "npx npm-force-resolutions@0.0.3",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -62,7 +62,7 @@
     "axios": "^0.27.2",
     "chart.js": "^2.9.3",
     "chartjs-plugin-style": "^0.5.0",
-    "connected-react-router": "^6.6.1",
+    "connected-react-router": "^6.9.2",
     "date-fns": "^2.16.1",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.16",
@@ -71,13 +71,13 @@
     "lodash.merge": "^4.6.2",
     "moment": "^2.29.1",
     "polished": "^3.6.6",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-chartjs-2": "^2.10.0",
     "react-content-loader": "^5.1.1",
     "react-csv": "^2.0.3",
     "react-datepicker": "^4.8.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
@@ -113,13 +113,13 @@
     "@types/lodash.merge": "^4.6.6",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^12.0.0",
-    "@types/react": "17.0.44",
+    "@types/react": "^18.0.14",
     "@types/react-beautiful-dnd": "^13.1.1",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-content-loader": "^4.0.0",
     "@types/react-csv": "^1.1.1",
     "@types/react-datepicker": "^3.1.1",
-    "@types/react-dom": "^17.0.0",
+    "@types/react-dom": "^18.0.5",
     "@types/react-input-mask": "^3.0.1",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.7",
