--- a/package.json
+++ b/package.json
@@ -197,6 +197,7 @@
     }
   },
   "resolutions": {
-    "@types/react": "17.0.30"
+    "@types/react": "17.0.30",
+    "babel-eslint": "9.0.0"
   }
 }
