--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "description": "Just A Rather Very Intelligent System (J.A.R.V.I.S.)",
   "homepage": "http://jarvis.corpintra.net",
   "scripts": {
-    "preinstall": "npx npm-force-resolutions@0.0.3",
-    "start": "react-scripts start",
+    "start": "CHOKIDAR_USEPOLLING=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
